[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "market-manipulation-env"
version = "1.0.0"
description = "Market Manipulation Detection OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
    "python-multipart>=0.0.9",
]
 
[project.scripts]
server = "server.app:main"
 
[project.urls]
Homepage = "https://huggingface.co/spaces/Lakshmi98496/manipulation-detection-env"
